--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ python-math
 more-itertools
 python-csv
 seaborn
-jupyterlab
-anyio==3.*
-ipywidgets
+jupyter
+#anyio==3.*
+#ipywidgets
 ipykernel
-imageio
-ipython>=8.13,<8.19
+#imageio
+#ipython>=8.13,<8.19
 
