--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,15 @@ more-itertools
 python-csv
 seaborn
 anyio==3.*
-sphinx
-sphinx-rtd-theme
+Sphinx==6.2.1
+sphinx-math-dollar==1.2.1
+sphinx-rtd-theme==1.2.1
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 
 
