--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ more-itertools
 python-csv
 seaborn
 anyio==3.*
-Sphinx<5.
+Sphinx<5.*
 sphinx-math-dollar==1.2.1
 sphinx-rtd-theme==1.2.1
 sphinxcontrib-applehelp==1.0.4
