--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ more-itertools
 python-csv
 seaborn
 anyio==3.*
+docutils<0.18,>=0.14
 Sphinx<5.0
 sphinx-math-dollar==1.2.1
 sphinx-rtd-theme==1.2.1
