--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ python-csv
 seaborn
 anyio==3.*
 docutils<0.18,>=0.14
-Sphinx<5.0
+Sphinx
 sphinx-math-dollar==1.2.1
 sphinx-rtd-theme==1.2.1
 python-sphinxcontrib-applehelp==1.0.4
