--- a/requirements.txt
+++ b/requirements.txt
@@ -11,17 +11,15 @@ more-itertools
 python-csv
 seaborn
 anyio==3.*
-docutils<0.18,>=0.14
-Sphinx
+Sphinx==6.2.1
 sphinx-math-dollar==1.2.1
-sphinx-rtd-theme==1.2.1
-python-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
+sphinx-rtd-theme==1.3.0
+sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-
+sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
 
 
