--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,19 @@ more-itertools==10.3.0
 python-csv==0.0.13
 seaborn==0.13.2
 anyio==3.*
-
+sphinx==7.3.7',
+myst-parser
+myst-nb
+sphinx-panels
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-serializinghtml==1.1.9
+sphinxcontrib-qthelp==1.0.6'
+docutils<0.21
+sphinx-rtd-theme
+sphinxcontrib-viewcode
+sphinx-ext-napoleon
+sphinxcontrib.mathjax
+sphinxcontrib-jquery==4.0
+autodocs
