--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
+wheel
 numpy<1.25.0,>=1.18.5
 scipy==1.13.1
-pandas==2.2.2
-random2==1.0.2
-scikit-learn==1.5.1
-matplotlib==3.9.1
-lhsmdu==1.1
-python-time==0.3.0
-python-math==0.0.1
-more-itertools==10.3.0
-python-csv==0.0.13
-seaborn==0.13.2
+matplotlib
+pandas
+random2
+scikit-learn
+lhsmdu
+python-time
+python-math
+more-itertools
+python-csv
+seaborn
 anyio==3.*
 sphinx==7.3.7
 sphinx-rtd-theme
